      (John Arbash Meinel)

  BUG FIXES:

    * ``bzr rm`` is now aliased to ``bzr del`` for the convenience of svn
      users. (Robert Collins, #205416)

    * Catch the infamous "select/poll returned error" which occurs when
      pycurl try to send a body request to an HTTP/1.0 server which has
      already refused to handle the request. (Vincent Ladeuil, #225020)

    * ``FTPTransport.stat()`` would return ``0000`` as the permission bits
      for the containing ``.bzr/`` directory (it does not implement
      permissions). This would cause us to set all subdirectories to
      ``0700`` and files to ``0600`` rather than leaving them unmodified.
      Now we ignore ``0000`` as the permissions and assume they are
      invalid. (John Arbash Meinel, #259855)
    
    * Running ``bzr st PATH_TO_TREE`` will no longer suppress merge
      status. Status is also about 7% faster on mozilla sized trees
      when the path to the root of the tree has been given. Users of
      the internal ``show_tree_status`` function should be aware that
      the show_pending flag is now authoritative for showing pending
      merges, as it was originally. (Robert Collins, #225204)

    * ``WorkingTree4`` trees will now correctly report missing-and-new
      paths in the output of ``iter_changes``. (Robert Collins)

  API CHANGES:

    * Exporters now take 4 parameters. (Robert Collins)

    * ``Tree.iter_changes`` will now return False for the content change
      field when a file is missing in the basis tree and not present in
      the target tree. Previously it returned True unconditionally.
      (Robert Collins)

    * The deprecated ``Branch.abspath`` and unimplemented 
      ``Branch.rename_one`` and ``Branch.move`` were removed. (Jelmer Vernooij)

  TESTING:

    * ``addCleanup`` now takes ``*arguments`` and ``**keyword_arguments``
      which are then passed to the cleanup callable as it is run. In
      addition, addCleanup no longer requires that the callables passed to